samples/_failures_safe/1761207272_04b0e9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_be3b3b01.c: In function ‘main’:
./samples/SAFE/__tmp_be3b3b01.c:144:13: error: expected expression at end of input
  144 |             case
      |             ^~~~
./samples/SAFE/__tmp_be3b3b01.c:144:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_be3b3b01.c:144:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_be3b3b01.c:144:13: error: expected declaration or statement at end of input
